qt6/gen_qgraphicsgridlayout.nim

import Qt6Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt6Widgets")
{.compile("gen_qgraphicsgridlayout.cpp", cflags).}


import gen_qgraphicsgridlayout_types
export gen_qgraphicsgridlayout_types

import
  gen_qcoreevent,
  gen_qgraphicslayout,
  gen_qgraphicslayoutitem,
  gen_qnamespace,
  gen_qrect,
  gen_qsize
export
  gen_qcoreevent,
  gen_qgraphicslayout,
  gen_qgraphicslayoutitem,
  gen_qnamespace,
  gen_qrect,
  gen_qsize

type cQGraphicsGridLayout*{.exportc: "QGraphicsGridLayout", incompleteStruct.} = object

proc fcQGraphicsGridLayout_new(): ptr cQGraphicsGridLayout {.importc: "QGraphicsGridLayout_new".}
proc fcQGraphicsGridLayout_new2(parent: pointer): ptr cQGraphicsGridLayout {.importc: "QGraphicsGridLayout_new2".}
proc fcQGraphicsGridLayout_addItem(self: pointer, item: pointer, row: cint, column: cint, rowSpan: cint, columnSpan: cint): void {.importc: "QGraphicsGridLayout_addItem".}
proc fcQGraphicsGridLayout_addItem2(self: pointer, item: pointer, row: cint, column: cint): void {.importc: "QGraphicsGridLayout_addItem2".}
proc fcQGraphicsGridLayout_setHorizontalSpacing(self: pointer, spacing: float64): void {.importc: "QGraphicsGridLayout_setHorizontalSpacing".}
proc fcQGraphicsGridLayout_horizontalSpacing(self: pointer, ): float64 {.importc: "QGraphicsGridLayout_horizontalSpacing".}
proc fcQGraphicsGridLayout_setVerticalSpacing(self: pointer, spacing: float64): void {.importc: "QGraphicsGridLayout_setVerticalSpacing".}
proc fcQGraphicsGridLayout_verticalSpacing(self: pointer, ): float64 {.importc: "QGraphicsGridLayout_verticalSpacing".}
proc fcQGraphicsGridLayout_setSpacing(self: pointer, spacing: float64): void {.importc: "QGraphicsGridLayout_setSpacing".}
proc fcQGraphicsGridLayout_setRowSpacing(self: pointer, row: cint, spacing: float64): void {.importc: "QGraphicsGridLayout_setRowSpacing".}
proc fcQGraphicsGridLayout_rowSpacing(self: pointer, row: cint): float64 {.importc: "QGraphicsGridLayout_rowSpacing".}
proc fcQGraphicsGridLayout_setColumnSpacing(self: pointer, column: cint, spacing: float64): void {.importc: "QGraphicsGridLayout_setColumnSpacing".}
proc fcQGraphicsGridLayout_columnSpacing(self: pointer, column: cint): float64 {.importc: "QGraphicsGridLayout_columnSpacing".}
proc fcQGraphicsGridLayout_setRowStretchFactor(self: pointer, row: cint, stretch: cint): void {.importc: "QGraphicsGridLayout_setRowStretchFactor".}
proc fcQGraphicsGridLayout_rowStretchFactor(self: pointer, row: cint): cint {.importc: "QGraphicsGridLayout_rowStretchFactor".}
proc fcQGraphicsGridLayout_setColumnStretchFactor(self: pointer, column: cint, stretch: cint): void {.importc: "QGraphicsGridLayout_setColumnStretchFactor".}
proc fcQGraphicsGridLayout_columnStretchFactor(self: pointer, column: cint): cint {.importc: "QGraphicsGridLayout_columnStretchFactor".}
proc fcQGraphicsGridLayout_setRowMinimumHeight(self: pointer, row: cint, height: float64): void {.importc: "QGraphicsGridLayout_setRowMinimumHeight".}
proc fcQGraphicsGridLayout_rowMinimumHeight(self: pointer, row: cint): float64 {.importc: "QGraphicsGridLayout_rowMinimumHeight".}
proc fcQGraphicsGridLayout_setRowPreferredHeight(self: pointer, row: cint, height: float64): void {.importc: "QGraphicsGridLayout_setRowPreferredHeight".}
proc fcQGraphicsGridLayout_rowPreferredHeight(self: pointer, row: cint): float64 {.importc: "QGraphicsGridLayout_rowPreferredHeight".}
proc fcQGraphicsGridLayout_setRowMaximumHeight(self: pointer, row: cint, height: float64): void {.importc: "QGraphicsGridLayout_setRowMaximumHeight".}
proc fcQGraphicsGridLayout_rowMaximumHeight(self: pointer, row: cint): float64 {.importc: "QGraphicsGridLayout_rowMaximumHeight".}
proc fcQGraphicsGridLayout_setRowFixedHeight(self: pointer, row: cint, height: float64): void {.importc: "QGraphicsGridLayout_setRowFixedHeight".}
proc fcQGraphicsGridLayout_setColumnMinimumWidth(self: pointer, column: cint, width: float64): void {.importc: "QGraphicsGridLayout_setColumnMinimumWidth".}
proc fcQGraphicsGridLayout_columnMinimumWidth(self: pointer, column: cint): float64 {.importc: "QGraphicsGridLayout_columnMinimumWidth".}
proc fcQGraphicsGridLayout_setColumnPreferredWidth(self: pointer, column: cint, width: float64): void {.importc: "QGraphicsGridLayout_setColumnPreferredWidth".}
proc fcQGraphicsGridLayout_columnPreferredWidth(self: pointer, column: cint): float64 {.importc: "QGraphicsGridLayout_columnPreferredWidth".}
proc fcQGraphicsGridLayout_setColumnMaximumWidth(self: pointer, column: cint, width: float64): void {.importc: "QGraphicsGridLayout_setColumnMaximumWidth".}
proc fcQGraphicsGridLayout_columnMaximumWidth(self: pointer, column: cint): float64 {.importc: "QGraphicsGridLayout_columnMaximumWidth".}
proc fcQGraphicsGridLayout_setColumnFixedWidth(self: pointer, column: cint, width: float64): void {.importc: "QGraphicsGridLayout_setColumnFixedWidth".}
proc fcQGraphicsGridLayout_setRowAlignment(self: pointer, row: cint, alignment: cint): void {.importc: "QGraphicsGridLayout_setRowAlignment".}
proc fcQGraphicsGridLayout_rowAlignment(self: pointer, row: cint): cint {.importc: "QGraphicsGridLayout_rowAlignment".}
proc fcQGraphicsGridLayout_setColumnAlignment(self: pointer, column: cint, alignment: cint): void {.importc: "QGraphicsGridLayout_setColumnAlignment".}
proc fcQGraphicsGridLayout_columnAlignment(self: pointer, column: cint): cint {.importc: "QGraphicsGridLayout_columnAlignment".}
proc fcQGraphicsGridLayout_setAlignment(self: pointer, item: pointer, alignment: cint): void {.importc: "QGraphicsGridLayout_setAlignment".}
proc fcQGraphicsGridLayout_alignment(self: pointer, item: pointer): cint {.importc: "QGraphicsGridLayout_alignment".}
proc fcQGraphicsGridLayout_rowCount(self: pointer, ): cint {.importc: "QGraphicsGridLayout_rowCount".}
proc fcQGraphicsGridLayout_columnCount(self: pointer, ): cint {.importc: "QGraphicsGridLayout_columnCount".}
proc fcQGraphicsGridLayout_itemAt(self: pointer, row: cint, column: cint): pointer {.importc: "QGraphicsGridLayout_itemAt".}
proc fcQGraphicsGridLayout_count(self: pointer, ): cint {.importc: "QGraphicsGridLayout_count".}
proc fcQGraphicsGridLayout_itemAtWithIndex(self: pointer, index: cint): pointer {.importc: "QGraphicsGridLayout_itemAtWithIndex".}
proc fcQGraphicsGridLayout_removeAt(self: pointer, index: cint): void {.importc: "QGraphicsGridLayout_removeAt".}
proc fcQGraphicsGridLayout_removeItem(self: pointer, item: pointer): void {.importc: "QGraphicsGridLayout_removeItem".}
proc fcQGraphicsGridLayout_invalidate(self: pointer, ): void {.importc: "QGraphicsGridLayout_invalidate".}
proc fcQGraphicsGridLayout_setGeometry(self: pointer, rect: pointer): void {.importc: "QGraphicsGridLayout_setGeometry".}
proc fcQGraphicsGridLayout_sizeHint(self: pointer, which: cint, constraint: pointer): pointer {.importc: "QGraphicsGridLayout_sizeHint".}
proc fcQGraphicsGridLayout_addItem6(self: pointer, item: pointer, row: cint, column: cint, rowSpan: cint, columnSpan: cint, alignment: cint): void {.importc: "QGraphicsGridLayout_addItem6".}
proc fcQGraphicsGridLayout_addItem4(self: pointer, item: pointer, row: cint, column: cint, alignment: cint): void {.importc: "QGraphicsGridLayout_addItem4".}
proc fQGraphicsGridLayout_virtualbase_count(self: pointer, ): cint{.importc: "QGraphicsGridLayout_virtualbase_count".}
proc fcQGraphicsGridLayout_override_virtual_count(self: pointer, slot: int) {.importc: "QGraphicsGridLayout_override_virtual_count".}
proc fQGraphicsGridLayout_virtualbase_itemAtWithIndex(self: pointer, index: cint): pointer{.importc: "QGraphicsGridLayout_virtualbase_itemAtWithIndex".}
proc fcQGraphicsGridLayout_override_virtual_itemAtWithIndex(self: pointer, slot: int) {.importc: "QGraphicsGridLayout_override_virtual_itemAtWithIndex".}
proc fQGraphicsGridLayout_virtualbase_removeAt(self: pointer, index: cint): void{.importc: "QGraphicsGridLayout_virtualbase_removeAt".}
proc fcQGraphicsGridLayout_override_virtual_removeAt(self: pointer, slot: int) {.importc: "QGraphicsGridLayout_override_virtual_removeAt".}
proc fQGraphicsGridLayout_virtualbase_invalidate(self: pointer, ): void{.importc: "QGraphicsGridLayout_virtualbase_invalidate".}
proc fcQGraphicsGridLayout_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QGraphicsGridLayout_override_virtual_invalidate".}
proc fQGraphicsGridLayout_virtualbase_setGeometry(self: pointer, rect: pointer): void{.importc: "QGraphicsGridLayout_virtualbase_setGeometry".}
proc fcQGraphicsGridLayout_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QGraphicsGridLayout_override_virtual_setGeometry".}
proc fQGraphicsGridLayout_virtualbase_sizeHint(self: pointer, which: cint, constraint: pointer): pointer{.importc: "QGraphicsGridLayout_virtualbase_sizeHint".}
proc fcQGraphicsGridLayout_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QGraphicsGridLayout_override_virtual_sizeHint".}
proc fQGraphicsGridLayout_virtualbase_getContentsMargins(self: pointer, left: ptr float64, top: ptr float64, right: ptr float64, bottom: ptr float64): void{.importc: "QGraphicsGridLayout_virtualbase_getContentsMargins".}
proc fcQGraphicsGridLayout_override_virtual_getContentsMargins(self: pointer, slot: int) {.importc: "QGraphicsGridLayout_override_virtual_getContentsMargins".}
proc fQGraphicsGridLayout_virtualbase_updateGeometry(self: pointer, ): void{.importc: "QGraphicsGridLayout_virtualbase_updateGeometry".}
proc fcQGraphicsGridLayout_override_virtual_updateGeometry(self: pointer, slot: int) {.importc: "QGraphicsGridLayout_override_virtual_updateGeometry".}
proc fQGraphicsGridLayout_virtualbase_widgetEvent(self: pointer, e: pointer): void{.importc: "QGraphicsGridLayout_virtualbase_widgetEvent".}
proc fcQGraphicsGridLayout_override_virtual_widgetEvent(self: pointer, slot: int) {.importc: "QGraphicsGridLayout_override_virtual_widgetEvent".}
proc fQGraphicsGridLayout_virtualbase_isEmpty(self: pointer, ): bool{.importc: "QGraphicsGridLayout_virtualbase_isEmpty".}
proc fcQGraphicsGridLayout_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QGraphicsGridLayout_override_virtual_isEmpty".}
proc fcQGraphicsGridLayout_delete(self: pointer) {.importc: "QGraphicsGridLayout_delete".}


func init*(T: type QGraphicsGridLayout, h: ptr cQGraphicsGridLayout): QGraphicsGridLayout =
  T(h: h)
proc create*(T: type QGraphicsGridLayout, ): QGraphicsGridLayout =

  QGraphicsGridLayout.init(fcQGraphicsGridLayout_new())
proc create*(T: type QGraphicsGridLayout, parent: gen_qgraphicslayoutitem.QGraphicsLayoutItem): QGraphicsGridLayout =

  QGraphicsGridLayout.init(fcQGraphicsGridLayout_new2(parent.h))
proc addItem*(self: QGraphicsGridLayout, item: gen_qgraphicslayoutitem.QGraphicsLayoutItem, row: cint, column: cint, rowSpan: cint, columnSpan: cint): void =

  fcQGraphicsGridLayout_addItem(self.h, item.h, row, column, rowSpan, columnSpan)

proc addItem2*(self: QGraphicsGridLayout, item: gen_qgraphicslayoutitem.QGraphicsLayoutItem, row: cint, column: cint): void =

  fcQGraphicsGridLayout_addItem2(self.h, item.h, row, column)

proc setHorizontalSpacing*(self: QGraphicsGridLayout, spacing: float64): void =

  fcQGraphicsGridLayout_setHorizontalSpacing(self.h, spacing)

proc horizontalSpacing*(self: QGraphicsGridLayout, ): float64 =

  fcQGraphicsGridLayout_horizontalSpacing(self.h)
